# niri-animation-rotate

./: AGENTS.md  Cargo.toml  README.md
src/: animation.rs  config.rs  main.rs  niri.rs
